--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "lodash": "^4.17.15",
     "lorem-ipsum": "^2.0.3",
+    "node-apriori": "^1.0.0",
     "puppeteer": "^1.19.0"
   }
 }
